--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,4 +1,4 @@
-.header{
+.header {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -7,7 +7,7 @@
     padding: 20px 0px;
 }
 
-.header > *{
+.header > * {
     color: whitesmoke
 }
 
@@ -15,7 +15,7 @@
 
 /*    Logo     */
 
-.header > :nth-child(1) > * {
+.header > :nth-child(1) :first-child {
     color:whitesmoke;
     text-decoration: none;
     font-size: x-large;
@@ -39,13 +39,13 @@
     margin-right: 40px;
 }
 
-.header > :nth-child(2) > :nth-child(1) > * {
+.header > :nth-child(2) > :nth-child(1) :first-child {
     color:whitesmoke;
     text-decoration: none;
     font-size: 15px;
 }
 
-.header > :nth-child(2) > :nth-child(1) > *:hover {
+.header > :nth-child(2) > :nth-child(1) :first-child:hover {
     color:#5ce9ff;
 }
 
@@ -53,7 +53,7 @@
 
 /*    Button menu item     */
 
-.header > :nth-child(2) > :nth-child(2) > * {
+.header > :nth-child(2) > :nth-child(2) :first-child {
     background-color:#13a8be;
     color: whitesmoke;
     border: none;
@@ -62,7 +62,7 @@
     border-radius: 5px;
 }
 
-.header > :nth-child(2) > :nth-child(2) > *:hover {
+.header > :nth-child(2) > :nth-child(2) :first-child:hover {
     background-color:#10bbd5;
     cursor: pointer;
 }
