--- a/src/components/pop up/PopUp.module.css
+++ b/src/components/pop up/PopUp.module.css
@@ -64,7 +64,7 @@
 
 .input {
     margin-top: 5px;
-    padding: 5px;
+    padding: 10px;
     font-size: 14px;
     border: 1px solid rgb(168, 168, 168);
     border-radius: 5px;
@@ -77,12 +77,11 @@
 }
 
 .categoryInput {
-    margin-top: 5px;
-    padding: 5px;
-    font-size: 14px;
-    border: 1px solid rgb(168, 168, 168);
-    border-radius: 5px;
     width: 45%;
+}
+
+.categoryInput0, .categoryInput2 {
+    margin-right: 10px;
 }
 
 .addCategory {
