--- a/src/components/pop up/PopUp.module.css
+++ b/src/components/pop up/PopUp.module.css
@@ -81,6 +81,10 @@
 }
 
 
+.importImageInput {
+    margin-top: 5px;
+}
+
 
 /* For Category and Author input fields with ability to add more fields */
 
