--- a/client/src/components/pop up/PopUp.module.css
+++ b/client/src/components/pop up/PopUp.module.css
@@ -5,6 +5,7 @@
     bottom: 0px;
     left: 0px;
     right: 0px;
+    z-index: 1;
 }
 
 .popUpContent {
@@ -20,6 +21,7 @@
     width: 40%;
     overflow: auto;
     background-color: #f8f4fc;
+    z-index: 1;
 }
 
 @media only screen and (max-width: 1200px){
