--- a/client/src/components/home/Home.module.css
+++ b/client/src/components/home/Home.module.css
@@ -23,17 +23,6 @@
     align-items: center;
 }
 
-.input {
-    margin-left: 30px;
-    padding: 10px;
-    font-size: 14px;
-    border: 2px solid rgb(133, 133, 133);
-    border-radius: 5px;
-    width: 50%;
-    text-align: center;
-    font-size: large;
-}
-
 .label {
     margin-right: 5px;
     color: rgb(100, 100, 100);
@@ -50,80 +39,24 @@
     outline: none;
 }
 
+.inputAndWarning {
+    width: 50%;
+    margin-left: 30px;
+}
+
+.input {
+    width: 100%;
+    padding: 10px;
+    font-size: 14px;
+    border: 2px solid rgb(133, 133, 133);
+    border-radius: 5px;
+    text-align: center;
+    font-size: large;
+}
+
 .input:focus {
     background-color: rgb(250, 250, 250);
     outline: none;
-}
-
-.images {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-}
-
-.imageContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 50px;
-}
-
-.blurImage {
-    height: 300px;
-    width: 200px;
-    position: relative;
-    cursor: pointer;
-    overflow: hidden;
-    margin-bottom: 15px;
-}
-
-.blur {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
-}
-
-.blurImage:hover > .blur {
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-.imageIcon {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: none;
-}
-
-.blurImage:hover > .imageIcon {
-    display: inline;
-}
-
-.image {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    z-index: -1;
-}
-
-.blurImage:hover > .image {
-    transform: scale(1.05);
-    transition-property: transform;
-    transition-duration: 0.7s;
-}
-
-.title {
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
-    right: 10px;
-    color: white;
-    font-weight: bold;
-    font-size: 14px;
-    text-align: center;
 }
 
 .star {
@@ -132,10 +65,29 @@
     color: #c4a300;
 }
 
+.warning {
+    color: red;
+    font-size: small;
+    margin-top: 5px;
+    text-align: center;
+}
+
+.bookImages {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+}
+
+.failed {
+    grid-column: 3;
+    font-size: large;
+    font-weight: bolder;
+    color: rgb(100, 100, 100);
+}
+
 
 @media only screen and (max-width: 900px){
 
-    .images{
+    .bookImages{
 
         grid-template-columns: auto auto;
     }
@@ -144,7 +96,7 @@
 
 @media only screen and (max-width: 460px){
 
-    .images{
+    .bookImages{
 
         grid-template-columns: auto;
     }
