--- a/client/src/components/home/Home.module.css
+++ b/client/src/components/home/Home.module.css
@@ -1,5 +1,5 @@
 .home {
-    padding: 40px 0px;
+    padding: 50px 0px;
     width: 90%;
     margin:auto;
 }
@@ -8,6 +8,7 @@
     font-size:x-large;
     text-align: center;
     margin-bottom: 20px;
+    color: rgb(100, 100, 100);
 }
 
 .searchDescription {
